--- a/src/dashing.net/Web.config
+++ b/src/dashing.net/Web.config
@@ -10,7 +10,6 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <remove key="SassAndCoffee.Cache" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -25,20 +24,8 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <caching>
-      <outputCacheSettings>
-        <outputCacheProfiles>
-          <add name="SassAndCoffeeCacheSettings" enabled="true" duration="3600" location="Any" varyByHeader="Accept-Encoding" />
-        </outputCacheProfiles>
-      </outputCacheSettings>
-    </caching>
-    <httpModules>
-      <add name="SassInterceptorModule" type="SassAndCoffee.AspNet.SassInterceptorModule" />
-      <add name="JavaScriptInterceptorModule" type="SassAndCoffee.AspNet.JavaScriptInterceptorModule" />
-    </httpModules>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -47,16 +34,13 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <modules runAllManagedModulesForAllRequests="true">
-      <add name="SassInterceptorModule" type="SassAndCoffee.AspNet.SassInterceptorModule" />
-      <add name="JavaScriptInterceptorModule" type="SassAndCoffee.AspNet.JavaScriptInterceptorModule" />
-    </modules>
-    <caching enabled="true" enableKernelCache="true">
-      <profiles>
-        <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" varyByHeaders="Accept-Encoding" location="Any" />
-        <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" varyByHeaders="Accept-Encoding" location="Any" />
-      </profiles>
-    </caching>
-    <urlCompression doStaticCompression="true" doDynamicCompression="true" />
   </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.21.0" newVersion="1.6.21.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
