fixing coffee and scss

--- a/src/dashing.net/Web.config
+++ b/src/dashing.net/Web.config
@@ -24,8 +24,12 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <httpHandlers>
+      <add path="*.coffee" verb="GET" type="CoffeeSharp.CoffeeScriptHttpHandler, CoffeeScriptHttpHandler" />
+    </httpHandlers>
   </system.web>
   <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -40,6 +44,10 @@
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.6.21.0" newVersion="1.6.21.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
