--- a/src/dashing.net/packages.config
+++ b/src/dashing.net/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CoffeeSharp" version="0.5" targetFramework="net45" />
   <package id="es5-shim" version="2.0.5" targetFramework="net45" />
+  <package id="IronRuby" version="1.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
@@ -12,4 +14,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="SassAndCoffee.Core" version="2.0.2.0" targetFramework="net45" />
+  <package id="SassAndCoffee.Ruby" version="2.0.2.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
