--- a/src/dashing.net.streaming/dashing.net.streaming.csproj
+++ b/src/dashing.net.streaming/dashing.net.streaming.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Stream.cs" />
+    <Compile Include="Dashing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
