--- a/src/dashing.net/Web.config
+++ b/src/dashing.net/Web.config
@@ -10,6 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AuthToken" value="YOUR_AUTH_TOKEN"/>
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
