Force all requests to run through the IIS pipeline to fix issue #3

--- a/src/dashing.net/Web.config
+++ b/src/dashing.net/Web.config
@@ -31,6 +31,7 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" ></modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
