--- a/src/dashing.net/Web.config
+++ b/src/dashing.net/Web.config
@@ -30,8 +30,8 @@
     </httpHandlers>
   </system.web>
   <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
     <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" ></modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
