Refactored MEF and introduced BlockingCollection. The system should now support multiple clients and disconnections in a much cleaner way

--- a/src/dashing.net.common/dashing.net.common.csproj
+++ b/src/dashing.net.common/dashing.net.common.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IJob.cs" />
+    <Compile Include="Jobs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
