Added initial implementation of rotating panel

--- a/src/dashing.net/dashing.net.csproj
+++ b/src/dashing.net/dashing.net.csproj
@@ -229,6 +229,7 @@
     <Content Include="Widgets\text\text.coffee" />
     <Content Include="Widgets\text\text.scss" />
     <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Views\Dashboard\Rotating.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
